Adjustments after split

--- a/themes/gron/layouts/_default/single.html
+++ b/themes/gron/layouts/_default/single.html
@@ -2,7 +2,11 @@
 
 <div class="container">
     {{.Content}}
-    <p><a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
+    <div class="row justify-content-end align-items-baseline">
+        <div class="col-6 text-right">
+            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+        </div>
+    </div>
     <hr>
 </div>
 {{ end }}
