--- a/themes/gron/layouts/posts/single.html
+++ b/themes/gron/layouts/posts/single.html
@@ -39,19 +39,25 @@
     </div>
 
     <div class="container">
-        <p>
-            <span class="fa fa-comments fa-fw"></span> Want to discuss anything? Comments are welcome via e-mail
-            <a href="mailto:alexey@gronskiy.com">alexey@gronskiy.com</a>, Telegram
-            <a href="https://t.me/agronskiy">@agronskiy</a> or
-            <a href="/index.html">any other social media</a>.
-        </p>
-        <p>
-            <a href="javascript:history.back()"><span class="fa fa-angle-double-left"></span> Go back</a>
-            &nbsp; &nbsp;
-            <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a></p>
-        <hr>
-    </div>
+        <div class="row align-items-baseline">
+            <div class="col text-right">
+                <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
+            </div>
+        </div>
+    <hr>
+        <div class="row">
+            <div class="col">
+                 <p>
+                    <span class="fa fa-comments fa-fw"></span> Want to discuss anything? Comments are welcome via e-mail
+                    <a href="mailto:alexey@gronskiy.com">alexey@gronskiy.com</a>, Telegram
+                    <a href="https://t.me/agronskiy">@agronskiy</a> or
+                    <a href="/index.html">any other social media</a>.
+                </p>
+            </div>
+        </div>
 
+    <hr>
+    </div>
 </main>
 
 {{ end }}
