--- a/themes/gron/layouts/partials/scripts.html
+++ b/themes/gron/layouts/partials/scripts.html
@@ -10,11 +10,11 @@ lightbox.option({
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111679868-1"></script>
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111679868-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-111679868-1');
-</script>
+</script>-->
