Reduced padding in mobile

--- a/themes/gron/layouts/_default/single.html
+++ b/themes/gron/layouts/_default/single.html
@@ -2,8 +2,8 @@
 
 <div class="container">
     {{.Content}}
-    <div class="row justify-content-end align-items-baseline">
-        <div class="col-6 text-right">
+    <div class="row lign-items-baseline">
+        <div class="col text-right">
             <a href="#"><span class="fa fa-angle-double-up"></span> Go to top</a>
         </div>
     </div>
