--- a/scss/common.scss
+++ b/scss/common.scss
@@ -40,7 +40,7 @@ $img-landscape: (
     sm: 92%,
     md: 89%,
     lg: 84%,
-    xl: 84% // not used,,
+    xl: 84% // not used,,,,,
 );
 
 $img-portrait: (
@@ -48,7 +48,13 @@ $img-portrait: (
     sm: 73%,
     md: 69%,
     lg: 66%,
-    xl: 66% // not used,,
+    xl: 66% // not used,,,,,
 );
 
+// Padding / margin for flex grid on extra-small devices (xs to sm).
+$custom-xs-grid-padding: 0.45rem;
+
+// This goes AFTER everything
 @import "node_modules/bootstrap/scss/bootstrap";
+
+// ADD NOTHING here (bootstrap import must go last here).
