--- a/themes/gron/layouts/shortcodes/codecaption.html
+++ b/themes/gron/layouts/shortcodes/codecaption.html
@@ -1,8 +1,10 @@
 <figure class="code">
+  {{ with .Get 0 }}
   <figcaption class="font-italic mb-1" markdown="span">
-    {{ .Get "caption" | markdownify }}
+    {{ . | markdownify }}:
   </figcaption>
-  <div class="codewrapper">
+  {{ end }}
+  <div>
     {{ .Inner }}
   </div>
 </figure>
