--- a/themes/gron/layouts/partials/scripts.html
+++ b/themes/gron/layouts/partials/scripts.html
@@ -18,3 +18,12 @@ lightbox.option({
 
   gtag('config', 'UA-111679868-1');
 </script>-->
+
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+$(document).ready(function() {
+  $( ".footnotes li" ).append( "<span class='target-highlight' />" );
+  $( ".footnote-ref" ).append( "<span class='target-highlight' />" );
+});
+</script>
