--- a/themes/gron/layouts/partials/scripts.html
+++ b/themes/gron/layouts/partials/scripts.html
@@ -20,10 +20,10 @@ lightbox.option({
 </script>-->
 
 <!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 $(document).ready(function() {
   $( ".footnotes li" ).append( "<span class='target-highlight' />" );
   $( ".footnote-ref" ).append( "<span class='target-highlight' />" );
 });
-</script>
+</script>-->
