--- a/themes/gron/layouts/shortcodes/codecaption.html
+++ b/themes/gron/layouts/shortcodes/codecaption.html
@@ -1,10 +1,10 @@
 <figure class="code">
   {{ with .Get 0 }}
   <figcaption class="font-italic mb-1" markdown="span">
-    {{ . | markdownify }}:
+    {{ . }}:
   </figcaption>
   {{ end }}
   <div>
-    {{ .Inner | markdownify }}
+    {{ .Inner }}
   </div>
 </figure>
