--- a/themes/gron/layouts/shortcodes/includeimage.html
+++ b/themes/gron/layouts/shortcodes/includeimage.html
@@ -32,7 +32,7 @@
   {{/* NOTE(agronskiy) We must utilize a newlines inside figcaption to process it as
     Markdown due to specs */}}
   <figcaption class="imgcaption font-italic mt-1" markdown="span">
-  {{ .Get "caption" | markdownify }}
+  {{ .Get "caption" }}
   </figcaption>
   {{ end }}
 </figure>
