--- a/themes/gron/layouts/shortcodes/includevideo.html
+++ b/themes/gron/layouts/shortcodes/includevideo.html
@@ -11,7 +11,7 @@
         Markdown due to specs */}}
   <figcaption class="imgcaption font-italic mt-1" markdown="span">
 
-  {{ .Get "caption" | markdownify }}
+  {{ .Get "caption" }}
 
   </figcaption>
   {{ end }}
