CSS code weight

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -35,6 +35,8 @@ $custom-line-height-sm: $line-height-lg;
 $custom-xs-to-sm-min-img-width-landscape: 80%;
 $custom-xs-to-sm-min-img-width-portrait: 65%;
 
+$custom-code-bold-weight: 500;
+
 $img-landscape: (
     xs: 98%,
     sm: 95%,
