--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
 @import "common";
 @import "gron_custom";
-@import "vs-code-highlight";
+@import "friendly-code-highlight";
+@import "custom_highlight";
