--- a/scss/friendly-code-highlight.scss
+++ b/scss/friendly-code-highlight.scss
@@ -1,7 +1,3 @@
-/* Background */
-.chroma {
-    background-color: #ffffff;
-}
 /* Other */
 .chroma .x {
 }
@@ -45,71 +41,90 @@
 }
 /* Keyword */
 .chroma .k {
-    color: #0000ff;
+    color: #007020;
+    font-weight: $custom-code-bold-weight;
 }
 /* KeywordConstant */
 .chroma .kc {
-    color: #0000ff;
+    color: #007020;
+    font-weight: $custom-code-bold-weight;
 }
 /* KeywordDeclaration */
 .chroma .kd {
-    color: #0000ff;
+    color: #007020;
+    font-weight: $custom-code-bold-weight;
 }
 /* KeywordNamespace */
 .chroma .kn {
-    color: #0000ff;
+    color: #007020;
+    font-weight: $custom-code-bold-weight;
 }
 /* KeywordPseudo */
 .chroma .kp {
-    color: #0000ff;
+    color: #007020;
 }
 /* KeywordReserved */
 .chroma .kr {
-    color: #0000ff;
+    color: #007020;
+    font-weight: $custom-code-bold-weight;
 }
 /* KeywordType */
 .chroma .kt {
-    color: #2b91af;
+    color: #902000;
 }
 /* Name */
 .chroma .n {
 }
 /* NameAttribute */
 .chroma .na {
+    color: #4070a0;
 }
 /* NameBuiltin */
 .chroma .nb {
+    color: #007020;
 }
 /* NameBuiltinPseudo */
 .chroma .bp {
 }
 /* NameClass */
 .chroma .nc {
-    color: #2b91af;
+    color: #0e84b5;
+    font-weight: $custom-code-bold-weight;
 }
 /* NameConstant */
 .chroma .no {
+    color: #60add5;
 }
 /* NameDecorator */
 .chroma .nd {
+    color: #555555;
+    font-weight: $custom-code-bold-weight;
 }
 /* NameEntity */
 .chroma .ni {
+    color: #d55537;
+    font-weight: $custom-code-bold-weight;
 }
 /* NameException */
 .chroma .ne {
+    color: #007020;
 }
 /* NameFunction */
 .chroma .nf {
+    color: #06287e;
 }
 /* NameFunctionMagic */
 .chroma .fm {
 }
 /* NameLabel */
 .chroma .nl {
+    color: #002070;
+    font-weight: $custom-code-bold-weight;
 }
 /* NameNamespace */
 .chroma .nn {
+    color: #0e84b5;
+    font-weight: $custom-code-bold-weight;
 }
 /* NameOther */
 .chroma .nx {
@@ -119,9 +134,12 @@
 }
 /* NameTag */
 .chroma .nt {
+    color: #062873;
+    font-weight: $custom-code-bold-weight;
 }
 /* NameVariable */
 .chroma .nv {
+    color: #bb60d5;
 }
 /* NameVariableClass */
 .chroma .vc {
@@ -143,124 +161,142 @@
 }
 /* LiteralString */
 .chroma .s {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringAffix */
 .chroma .sa {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringBacktick */
 .chroma .sb {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringChar */
 .chroma .sc {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringDelimiter */
 .chroma .dl {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringDoc */
 .chroma .sd {
-    color: #a31515;
+    color: #4070a0;
+    font-style: italic;
 }
 /* LiteralStringDouble */
 .chroma .s2 {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringEscape */
 .chroma .se {
-    color: #a31515;
+    color: #4070a0;
+    font-weight: $custom-code-bold-weight;
 }
 /* LiteralStringHeredoc */
 .chroma .sh {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringInterpol */
 .chroma .si {
-    color: #a31515;
+    color: #70a0d0;
+    font-style: italic;
 }
 /* LiteralStringOther */
 .chroma .sx {
-    color: #a31515;
+    color: #c65d09;
 }
 /* LiteralStringRegex */
 .chroma .sr {
-    color: #a31515;
+    color: #235388;
 }
 /* LiteralStringSingle */
 .chroma .s1 {
-    color: #a31515;
+    color: #4070a0;
 }
 /* LiteralStringSymbol */
 .chroma .ss {
-    color: #a31515;
+    color: #517918;
 }
 /* LiteralNumber */
 .chroma .m {
+    color: #40a070;
 }
 /* LiteralNumberBin */
 .chroma .mb {
+    color: #40a070;
 }
 /* LiteralNumberFloat */
 .chroma .mf {
+    color: #40a070;
 }
 /* LiteralNumberHex */
 .chroma .mh {
+    color: #40a070;
 }
 /* LiteralNumberInteger */
 .chroma .mi {
+    color: #40a070;
 }
 /* LiteralNumberIntegerLong */
 .chroma .il {
+    color: #40a070;
 }
 /* LiteralNumberOct */
 .chroma .mo {
+    color: #40a070;
 }
 /* Operator */
 .chroma .o {
+    color: #666666;
 }
 /* OperatorWord */
 .chroma .ow {
-    color: #0000ff;
+    color: #007020;
+    font-weight: $custom-code-bold-weight;
 }
 /* Punctuation */
 .chroma .p {
 }
 /* Comment */
 .chroma .c {
-    color: #008000;
+    color: #60a0b0;
+    font-style: italic;
 }
 /* CommentHashbang */
 .chroma .ch {
-    color: #008000;
+    color: #60a0b0;
+    font-style: italic;
 }
 /* CommentMultiline */
 .chroma .cm {
-    color: #008000;
+    color: #60a0b0;
+    font-style: italic;
 }
 /* CommentSingle */
 .chroma .c1 {
-    color: #008000;
+    color: #60a0b0;
+    font-style: italic;
 }
 /* CommentSpecial */
 .chroma .cs {
-    color: #008000;
+    color: #60a0b0;
+    background-color: #fff0f0;
 }
 /* CommentPreproc */
 .chroma .cp {
-    color: #0000ff;
+    color: #007020;
 }
 /* CommentPreprocFile */
 .chroma .cpf {
-    color: #0000ff;
+    color: #007020;
 }
 /* Generic */
 .chroma .g {
 }
 /* GenericDeleted */
 .chroma .gd {
+    color: #a00000;
 }
 /* GenericEmph */
 .chroma .ge {
@@ -268,35 +304,44 @@
 }
 /* GenericError */
 .chroma .gr {
+    color: #ff0000;
 }
 /* GenericHeading */
 .chroma .gh {
-    font-weight: bold;
+    color: #000080;
+    font-weight: $custom-code-bold-weight;
 }
 /* GenericInserted */
 .chroma .gi {
+    color: #00a000;
 }
 /* GenericOutput */
 .chroma .go {
+    color: #888888;
 }
 /* GenericPrompt */
 .chroma .gp {
-    font-weight: bold;
+    color: #c65d09;
+    font-weight: $custom-code-bold-weight;
 }
 /* GenericStrong */
 .chroma .gs {
-    font-weight: bold;
+    font-weight: $custom-code-bold-weight;
 }
 /* GenericSubheading */
 .chroma .gu {
-    font-weight: bold;
+    color: #800080;
+    font-weight: $custom-code-bold-weight;
 }
 /* GenericTraceback */
 .chroma .gt {
+    color: #0044dd;
 }
 /* GenericUnderline */
 .chroma .gl {
+    text-decoration: underline;
 }
 /* TextWhitespace */
 .chroma .w {
+    color: #bbbbbb;
 }
