--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
 @import "common";
 @import "gron_custom";
-@import "friendly-code-highlight";
+@import "custom-code-highlight";
 @import "custom_highlight";
