--- a/scss/common.scss
+++ b/scss/common.scss
@@ -22,6 +22,7 @@ $font-family-monospace: "Fira Mono", "Monaco", "Consolas", "Lucida Console", mon
 $code-font-size: 92%;
 $code-color: $gray-900;
 
+$custom-body-color-dark-grey: #4b4b4b;
 $custom-body-color: #606060;
 $custom-body-color-light: #909090;
 $custom-body-color-superlight: #efefef;
